<resources>
    <string name="app_name">Voyage</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgot_password">Forgot username or password?</string>
    <string name="or_signin_with">Or Sign In with</string>
    <string name="title_activity_register">Register</string>
    <string name="loading">Loading…</string>
    <string name="facebook_app_id">422398251429825</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="permission_location_rationale">Location permission is needed to show you nearby places.</string>
    <string name="permission_available_location">Location permission has been granted.</string>
    <string name="permission_not_granted"> permission not granted.</string>
    <string name="ok">OK</string>
    <string name="gps_network_not_enabled">Gps isn\'t available</string>
    <string name="open_location_settings">Location Setting</string>
    <string name="open_Internet_settings">Internet Setting</string>
    <string name="Cancel">cancel</string>

    <string-array name="place_name">
        <item>Rajmandir Cinema</item>
        <item>Jaipur Zoo</item>
        <item>Man Sagar Lake</item>
        <item>Jawahar Kala Kendra</item>
        <item>Garh Ganesh Temple</item>
        <item>Central Park</item>
        <item>Sanganeri Gate</item>
    </string-array>
    <string-array name="place_sub">
        <item>Movie Theater</item>
        <item>Zoo</item>
        <item>Lake in Jaipur</item>
        <item>Architecture, auditorium, museum, and art</item>
        <item>Hindu Temple</item>
        <item>Sprawling green space for public use</item>
        <item>Historic city gate near jewelry bazaar</item>
    </string-array>
    <string-array name="place_rating">
        <item>4.5</item>
        <item>3.9</item>
        <item>NA</item>
        <item>4.2</item>
        <item>4.4</item>
        <item>4.0</item>
        <item>3.5</item>
    </string-array>
    <string-array name="place_image">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
</resources>
