<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.voyage.SignIn"
    android:padding="16dp"
    android:background="@drawable/indvector"
    >

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="Sign In"
        android:textColor="@color/colorBlack"
        android:textSize="22dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:padding="10dp">



                />
            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBlack"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:windowSoftInputMode="adjustPan|adjustNothing"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack" />



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBlack"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:windowSoftInputMode="stateVisible|adjustPan"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorBlack" />

                <TextView
                    android:layout_width="240dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="17dp" />

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/colorBlack"
                    android:paddingTop="0dp"></LinearLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="110dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="#fa6808"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.2"
                        android:background="@color/colorBlack"
                        android:gravity="center"></LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".6"
                        android:gravity="center"
                        android:text="@string/or_signin_with"
                        android:textColor="@color/colorBlack"
                        android:textSize="17dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.2"
                        android:background="@color/colorBlack"
                        android:gravity="center"></LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/login_button_img"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:src="@drawable/facebook"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"/>
              <!--  <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    />-->

                <Button
                    android:id="@+id/gplus_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/google"
                    android:visibility="visible"
                    />

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Haven't signed up yet?"
                        android:textSize="17dp"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18dp"
                        android:id="@+id/register_now"
                        android:paddingLeft="6dp"
                        android:textColor="@color/colorRed"
                        android:text="Register Now" />
                </LinearLayout>

            </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
